--- a/views/home.html
+++ b/views/home.html
@@ -155,7 +155,7 @@
              notifications.reverse();
              notifications.forEach(function (element) {
                var date_not = element.date_notification.substring(0,16).replace("T", " ");
-               var date_time = date_not.substring(8,10)+"-"+date_not.substring(5,7)+"-"+date_not.substring(0,4) + " "+date_not.substring(11,16);
+               var date_time = date_not.substring(8,10)+"/"+date_not.substring(5,7)+"/"+date_not.substring(0,4) + " "+date_not.substring(11,16);
                // console.log(date_time);
                $("#notification-liste").append(
                        '<tr>'+
@@ -363,54 +363,6 @@
                     <span class="badge bg-green" id="number-notifications">0</span>
                   </a>
                   <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
-                    <li>
-                      <a>
-                        <span class="image"><img src="../images/user.png" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                      </a>
-                    </li>
-                    <li>
-                      <a>
-                        <span class="image"><img src="../images/user.png" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                      </a>
-                    </li>
-                    <li>
-                      <a>
-                        <span class="image"><img src="../images/user.png" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                      </a>
-                    </li>
-                    <li>
-                      <a>
-                        <span class="image"><img src="../images/user.png" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                      </a>
-                    </li>
                     <li>
                       <div class="text-center">
                         <a onclick="loadTableauBord();" id="see-all-alerts">
