--- a/views/tableau_bord.html
+++ b/views/tableau_bord.html
@@ -55,6 +55,7 @@
 
                         </tbody>
                     </table>
+                    <div id="notif_empty"></div>
 
                 </div>
             </div>
