validation conge 2 bugs : tableau ne se rafraichit pas a l'annulation(mais il le fait a la validation j'ai trouvé une solution) , message de tableau vide

--- a/views/home.html
+++ b/views/home.html
@@ -96,7 +96,9 @@
          function loadMesMissions() {
            $('#pageInterne').load('mes_missions.html');
          }
-
+         function loadValidationCongés() {
+          $('#pageInterne').load('validation_conge.html');
+         }
          function loadMesNFrais() {
             $('#pageInterne').load('notes_de_frais.html');
         }
@@ -182,7 +184,7 @@
 
                   <li><a><i class="fa fa-university"></i> Mission <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li  class="validation-conges" onclick="loadCreateMission()"><a>Nouvelle mission </a></li>
+                      <li  class="creation-mission" onclick="loadCreateMission()"><a>Nouvelle mission </a></li>
                       <li onclick="loadMesMissions()"><a>Mes missions en détail</a></li>
                       <!-- <li><a>Nouvelle demande</a></li> -->
                     </ul>
@@ -439,7 +441,7 @@
       $.get("/name", function(data, status)
       {
           var profile = JSON.parse(data);
-          console.log()
+         
           $('.profile-name').each(function() {
             $(this).html(firstToUpperCase(profile.prenom.toLowerCase()) + " " + firstToUpperCase(profile.nom.toLowerCase()));
             //console.log(JSON.stringify(profile));
