--- a/views/home.html
+++ b/views/home.html
@@ -465,7 +465,7 @@
           if(profile.service.nom == "RH" || profile.role.nom =="Chef de service")
               $('#valider-ndf').hide()
 
-          if(profile.service.nom == "Comptabilité" || profile.role.nom =="Chef de service")
+          if(profile.service.nom == "RH" || profile.role.nom =="Chef de service")
             $('.validation-conges').show();
 
           if(profile.role.nom =="Chef de service")
